# libuast

./: .gitignore  .travis.yml  CMakeLists.txt  Gopkg.toml  MAINTAINERS  Makefile  README.md  WINDOWS.md  appveyor.yml  cut.sh  gen_header.go  generate-roles.go  go.mod  go.sum  node.cpp  node.h  node_impl.h  roles.cpp  roles.h  test.cpp  uast.cpp  uast.h
examples/: CMakeLists.txt  example.cc  example.cpp  example1  example1.cpp
examples/cmake/: FindUast.cmake
fixtures/uast-protobuf/: README.md
fixtures/uast-protobuf/java/: AirlineProblem.java.uast.pb  ArrayExamples.java.uast.pb  BinaryConverter.java.uast.pb  CallingMethodsInSameClass.java.uast.pb  CreateASet.java  CreateASet.java.uast.pb  DemoClass.java.uast.pb  Die.java  Die.java.uast.pb  EightQueens.java  EnhancedFor.java.uast.pb  Factorial.java.uast.pb  FilterExample.java.uast.pb  FreqTableExampleOriginal.java  FreqTableExampleOriginal.java.uast.pb  GenericList.java  GenericList.java.uast.pb  GenericListVersion2.java  GenericListVersion2.java.uast.pb  GrammarKit.java.uast.pb  HelloWorld.java.uast.pb  HtmlDomParserContext.java.uast.pb  Hudson.java.uast.pb  IList.java  IList.java.uast.pb  IntListTesterVer1.java  IntListTesterVer1.java.uast.pb  IntListTesterVer2.java  IntListTesterVer2.java.uast.pb  IntListVer1.java  IntListVer1.java.uast.pb  IntListVer2.java  IntListVer2.java.uast.pb  IntListVer3.java  IntListVer3.java.uast.pb  JFlexLexer.java.uast.pb  Life.java.uast.pb  LinkedList.java  LinkedList.java.uast.pb  ListNode.java  (+30 more)
fixtures/uast-protobuf/python/: AdditiveWave.pyde.uast.pb  Cinema4DPythonPlugin.pyp.uast.pb  MoveEye.pyde.uast.pb  action.cgi.uast.pb  argparse.pyi.uast.pb  aritmeticops.py  aritmeticops.py.uast.pb  assert_constant.py  assert_constant.py.uast.pb  augassign.py  augassign.py.uast.pb  backstage.fcgi.uast.pb  bitwise.py  bitwise.py.uast.pb  booleanop.py  booleanop.py.uast.pb  classdef.py.source  classdef.py.source.uast.pb  classdef_inheritance.py.source  classdef_inheritance.py.source.uast.pb  classdef_metaclass_py2.py.source  classdef_metaclass_py2.py.source.uast.pb  classdef_metaclass_py3.py.source  classdef_metaclass_py3.py.source.uast.pb  closure_js_binary.bzl.uast.pb  comments.py.source  comments.py.source.uast.pb  comprehension_dict.py.source  comprehension_dict.py.source.uast.pb  comprehension_list.py.source  comprehension_list.py.source.uast.pb  comprehension_set.py.source  comprehension_set.py.source.uast.pb  declarations_annotated.py  declarations_annotated.py.uast.pb  django-models-base.py.uast.pb  ellipsis.py  ellipsis.py.uast.pb  except.py  except.py.uast.pb  (+71 more)
scripts/: generate-roles.go  update-minor.sh  update-version.sh
src/: api.go  export.h  find-ctx.h  find_ctx.h  helpers.c  libuast.hpp  node-iface.h  node_iface.h  nodes.h  nodes_c.go  nodes_go.go  private.h  roles.c  roles.h  src_index.go  testing-tools.c  testing-tools.h  testing_tools.c  testing_tools.h  uast.c  uast.cc  uast.go  uast.h  uast_private.h
tests/: CMakeLists.txt  main.cc  main.cpp  mock-node.h  mock_node.h  nodes-test.h  nodes_test.h  roles-test.h  roles_test.h  src_index_test.h  test1.cpp  testsuite
tests/cmake/: FindUast.cmake
